syntax = "proto3";

package com.sirius.game.proto;

option java_multiple_files = true;
option java_package = "com.sirius.game.proto";
option java_outer_classname = "ChatProtos";

// 消息类型枚举
enum MessageType {
  UNKNOWN = 0;
  SEND_REQUEST = 1;
  RECEIVE_NOTIFICATION = 2;
}

// 统一消息类型
message Message {
  MessageType type = 1;  // 消息类型标识符
  // 使用oneof定义不同的消息内容，便于未来扩展
  oneof payload {
    SendMessageRequest send_request = 2;
    ReceiveMessageNotification receive_notification = 3;
  }
}

// 发送短信请求
message SendMessageRequest {
  string from = 1;  // 发送者ID
  string to = 2;    // 接收者ID
  string content = 3;  // 消息内容
  int64 timestamp = 4;   // 时间戳
}

// 收到短信通知
message ReceiveMessageNotification {
  string from = 1;  // 发送者ID
  string to = 2;    // 接收者ID
  string content = 3;  // 消息内容
  int64 timestamp = 4;   // 时间戳
  string message_id = 5; // 消息ID
}